--- a/Web-Developer-Course/Dungeon/antri_elf.html
+++ b/Web-Developer-Course/Dungeon/antri_elf.html
@@ -28,7 +28,7 @@
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <!--<span class="navbar-toggler-icon"></span>-->
-                <img src="images/old_shield_item.png" alt="logo" width="30" height="30" />
+                <img src="images/navbar_icon.png" alt="logo" width="30" height="30" />
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav abs-center-x">
