--- a/Web-Developer-Course/Dungeon/antri_home.html
+++ b/Web-Developer-Course/Dungeon/antri_home.html
@@ -86,7 +86,7 @@
                 </p>
                 <p>
                     Besides this website I have made other various websites to practice different libraries
-                    and tools, they also somehow ended up being fantasy-themed, so I guess there is consistency.
+                    and tools.
                     If you are interested check out those websites which are listed below too.
                 </p>
                 <p>
