--- a/Web-Developer-Course/Dungeon/antri_home.html
+++ b/Web-Developer-Course/Dungeon/antri_home.html
@@ -81,7 +81,7 @@
                 <p>
                     This website is something I created to practice Bootstrap and website-making
                     in general. I love writing and drawing about fantasy world building and setting,
-                    so I decided to theme it that way. While it may seem silly, I had a great
+                    so I decided to theme it that way. I had a great
                     time making this, so I hope that you can enjoy viewing and reading it too.
                 </p>
                 <p>
