Adventure in Antri

--- a/Web-Developer-Course/Dungeon/antri_deity.html
+++ b/Web-Developer-Course/Dungeon/antri_deity.html
@@ -232,7 +232,7 @@
                     </div>
 
                     <h2 class="mt-3 mb-0">"You dare attempt to trick me, knowing that every treacherous thoughts and lies you have spouted was that of my design?"</h2>
-                    <p class="text-end quote-speaker">-Oros to Paust, the human who dared to challange him.</p>
+                    <p class="text-end quote-speaker">-Oros to Paust, the human who challange him.</p>
                     <p class="mt-4">
                         Oros is the god of treachery and change. He takes the form of a mess of snakes and tongues, its shape ever-shifting and changing.
                     </p>
