--- a/Web-Developer-Course/Dungeon/antri_deity.html
+++ b/Web-Developer-Course/Dungeon/antri_deity.html
@@ -206,7 +206,7 @@
                     <p>
                         Hemiad is the sculptor of the landscape of Antri, and the creator of the dwarves.
                         After being betrayed and attacked by the dwarves, Hemiad exploded, releasing a wave of energy that changed Antri forever. With his last strength, he protected
-                        his attackers from the explosion, allowing some of the dwarves to maintain their form. Eternally regreful of their transgression, the dwarves wait for Hemiad to open his eyes,
+                        his attackers from the explosion, allowing some of the dwarves to maintain their form. Eternally regretful of their transgression, the dwarves wait for Hemiad to open his eyes,
                         carrying out the message and will of Hemiad with their action and soul.
                     </p>
                 </div>
