--- a/index.html
+++ b/index.html
@@ -84,6 +84,9 @@
         <a href="/Web-Developer-Course/Dungeon/antri_home.html" target="_blank">
             Project Antri
         </a>
+        <a href="/Web-Developer-Course/Dungeon/Adventure In Antri/antri_adventure.html" target="_blank">
+            .
+        </a>
     </p>
 
 </body>
