Remodel Antri website wow colors

--- a/Web-Developer-Course/Dungeon/antri_deity.html
+++ b/Web-Developer-Course/Dungeon/antri_deity.html
@@ -2,7 +2,7 @@
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <title>Portfolio</title>
+    <title>Antri-Deity</title>
     <meta charset="utf-8" />
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -15,15 +15,19 @@
     <script src="antriScript.js"></script>
     <link rel="stylesheet" type="text/css" href="antriStyle.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Mate+SC&display=swap" rel="stylesheet">
+
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Josefin+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=IM+Fell+DW+Pica+SC&display=swap" rel="stylesheet">
 </head>
 <body>
     <!--navbar-->
     <nav class="navbar navbar-expand-lg fixed-top navbar-home">
         <div class="container-fluid">
-            <a class="navbar-brand ms-3" href="antri_home.html">
-                <img src="images/old_shield_item.png" alt="logo" width="40" height="40" />
+            <a class="navbar-brand ms-5" href="antri_home.html">
+                <img src="images/antri_logo.png" alt="logo" height="40" />
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <!--<span class="navbar-toggler-icon"></span>-->
@@ -31,10 +35,10 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav abs-center-x">
-                    <li class="nav-item">
+                    <li class="nav-item ms-3">
                         <a class="nav-link" aria-current="page" href="antri_home.html">Home</a>
                     </li>
-                    <li class="nav-item dropdown">
+                    <li class="nav-item dropdown ms-3">
                         <a class="nav-link dropdown-toggle" href="#" id="raceDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Race
                         </a>
@@ -45,14 +49,14 @@
                             <li><a class="dropdown-item" href="antri_halfling.html">Halfling</a></li>
                         </ul>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item ms-3">
                         <a class="nav-link" aria-current="page" href="antri_creatures.html">Wildlife</a>
                     </li>
 
-                    <li class="nav-item">
+                    <li class="nav-item ms-3">
                         <a class="nav-link" aria-current="page" href="antri_map.html">World</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item ms-3">
                         <a class="nav-link active" aria-current="page" href="antri_deity.html">Deities</a>
                     </li>
                 </ul>
@@ -122,14 +126,14 @@
                     </div>-->
 
                     <div class="deity-name">
-                        <p class="mt-3">A v e r a</p>
+                        <p class="mt-3">A V E R A</p>
                     </div>
 
                     <div class="text-center">
                         <img src="images/deity_avera.png" class="card-img-top deity-modal-card" alt="avera">
                     </div>
 
-                    <h2 class="mt-3 mb-0">"The Mother of all living things, Avera watches the world with great adoration."</h2>
+                    <h2 class="fst-italic mt-3 mb-0 quote">"The Mother of all living things, Avera watches the world with great adoration."</h2>
                     <p class="text-end quote-speaker">-Scripture of Avera</p>
                     <p class="mt-4">
                         Avera is the goddess of nature and life. She is responsible for the creation of elves, animals, and plants that inhabited the world
@@ -163,8 +167,8 @@
                         <img src="images/deity_deus.png" class="card-img-top deity-modal-card" alt="deus">
                     </div>
 
-                    <h2 class="mt-3 mb-0">"Deus does not resemble our machines, our machinery is a feeble imitation of its infinite efficiency and complexity."</h2>
-                    <p class="text-end quote-speaker">-Scripture of Deus</p>
+                    <h2 class="mt-3 mb-0 quote">"Deus does not resemble our machines, our machinery is a feeble imitation of its infinite efficiency and complexity."</h2>
+                    <p class="fst-italic text-end quote-speaker">-Scripture of Deus</p>
                     <p class="mt-4">
                         Deus is the god of order and time. It's form resembles an endless connection of gears and machinery, so complex and intricate that a mortal
                         will be driven mad once exposed to its form.
@@ -196,8 +200,8 @@
                         <img src="images/deity_hemiad.png" class="card-img-top deity-modal-card" alt="hemiad">
                     </div>
 
-                    <h2 class="mt-3 mb-0">"A god betrayed by his own creation and laid to eternal slumber, yet he smiles."</h2>
-                    <p class="text-end quote-speaker">-"Observation of Hemiad"</p>
+                    <h2 class="mt-3 mb-0 quote">"A god betrayed by his own creation and laid to eternal slumber, yet he smiles."</h2>
+                    <p class="fst-italic text-end quote-speaker">-"Observation of Hemiad"</p>
                     <p class="mt-4">
                         Hemiad is the dormant god of compassion and earth. Having lost his powers and conciousness, he now takes the form of a faded stone tablet,
                         with faint depiction of his original form.
@@ -231,7 +235,7 @@
                         <img src="images/deity_oros.png" class="card-img-top deity-modal-card" alt="oros">
                     </div>
 
-                    <h2 class="mt-3 mb-0">"You dare attempt to trick me, knowing that every treacherous thoughts and lies you have spouted was that of my design?"</h2>
+                    <h2 class="fst-italic mt-3 mb-0 quote">"You dare attempt to trick me, knowing that every treacherous thoughts and lies you have spouted was that of my design?"</h2>
                     <p class="text-end quote-speaker">-Oros to Paust, the human who challanged him.</p>
                     <p class="mt-4">
                         Oros is the god of treachery and change. He takes the form of a mess of snakes and tongues, its shape ever-shifting and changing.
@@ -263,8 +267,8 @@
                         <img src="images/deity_chec.png" class="card-img-top deity-modal-card" alt="chec">
                     </div>
 
-                    <h2 class="mt-3 mb-0">"The gates to Chec open only once for each mortal, most never make out."</h2>
-                    <p class="text-end quote-speaker">-"On Chec's realm"</p>
+                    <h2 class="mt-3 mb-0 quote">"The gates to Chec open only once for each mortal, most never make out."</h2>
+                    <p class="fst-italic text-end quote-speaker">-"On Chec's realm"</p>
                     <p class="mt-4">
                         Chec is the god of knowledge and experience. He is responsible for gifting Antri with language.
                         He takes a humanoid form with a giant eye replacing where the head would be.
