--- a/Web-Developer-Course/Dungeon/antri_dwarf.html
+++ b/Web-Developer-Course/Dungeon/antri_dwarf.html
@@ -2,11 +2,11 @@
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <title>Portfolio</title>
+    <title>Antri-Dwarf</title>
     <meta charset="utf-8" />
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" href="images/old shield_item.png" />
+    <link rel="icon" href="images/old_shield_item.png" />
     <link href="../jquery_ui/jquery-ui.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js">
@@ -16,15 +16,19 @@
     <link rel="stylesheet" type="text/css" href="antriStyle.css">
     <!--animate on scroll library-->
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Mate+SC&display=swap" rel="stylesheet">
+
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Josefin+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=IM+Fell+DW+Pica+SC&display=swap" rel="stylesheet">
 </head>
 <body>
     <!--navbar-->
     <nav class="navbar navbar-expand-lg fixed-top navbar-home">
         <div class="container-fluid">
-            <a class="navbar-brand ms-3" href="antri_home.html">
-                <img src="images/old_shield_item.png" alt="logo" width="40" height="40" />
+            <a class="navbar-brand ms-5" href="antri_home.html">
+                <img src="images/antri_logo.png" alt="logo" height="40" />
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <!--<span class="navbar-toggler-icon"></span>-->
@@ -32,10 +36,10 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav abs-center-x">
-                    <li class="nav-item">
+                    <li class="nav-item ms-3">
                         <a class="nav-link" aria-current="page" href="antri_home.html">Home</a>
                     </li>
-                    <li class="nav-item dropdown">
+                    <li class="nav-item dropdown ms-3">
                         <a class="nav-link dropdown-toggle" href="#" id="raceDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Race
                         </a>
@@ -46,14 +50,14 @@
                             <li><a class="dropdown-item" href="antri_halfling.html">Halfling</a></li>
                         </ul>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item ms-3">
                         <a class="nav-link" aria-current="page" href="antri_creatures.html">Wildlife</a>
                     </li>
 
-                    <li class="nav-item">
+                    <li class="nav-item ms-3">
                         <a class="nav-link" aria-current="page" href="antri_map.html">World</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item ms-3">
                         <a class="nav-link" aria-current="page" href="antri_deity.html">Deities</a>
                     </li>
                 </ul>
@@ -65,22 +69,22 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-8 mt-5">
-                <h1 class="intro-header ms-5">Dwarf</h1>
+                <h1 class="intro-header">Dwarf</h1>
                 <hr />
             </div>
         </div>
         <div class="row">
-            <div data-aos="zoom-in" class="col-sm-5 text-center">
+            <div data-aos="zoom-in" class="col text-center">
                 <img class="img-fluid" id="body_illus" src="images/dwarf_gram.png" />
                 <p class="fw-bold">Gram, dwarven lorekeeper</p>
             </div>
-            <div data-aos="fade-left" class="col mt-5">
-                <h3 class="fst-italic">
+            <div data-aos="fade-left" class="col-sm-6 mt-3">
+                <h3 class="fst-italic quote">
                     "Men of stone, the dwarves are relics, perhaps the only entity unchanged after the Hemiad Explosion."
                 </h3>
                 <p class="fst-italic text-end">-Grimith Evelan, historian</p>
 
-                <p class="mt-3 ms-3">
+                <p class="mt-3">
                     Dwarves are the creation of god Hemiad, who is said to have forged each dwarf from a mountain. While the dwarves exposed to the Hemiad Explosion eventually
                     became halflings, dwarves sheltered from the initial explosion maintained their form, the only entity to do so. In result, dwarves are vastly unique in their
                     composition and biology from the other races. While they resemble the human form, dwarves are not made of flesh and blood, and are instead carved from stone.
@@ -89,14 +93,14 @@
                     dwarf's final task is often to carve their successor.
 
                 </p>
-                <p class="mt-3 ms-3">
+                <p class="mt-3">
                     Despite their cold, hard exterior, dwarves are unthinkably compassoniate and kind. While they are not the best at expressing themselves, dwarves are often the first to lend a helping
                     hand where they can, even at their own
                     incovinience. Due to their nature, a dwarf may come off as condenscending or overprotective, as they will attempt to assist in even the simplest task.
                     When not helping other people, dwarves tend to be talented scholars, and find joy in researching technology and recording history.
                 </p>
 
-                <p class="mt-3 ms-3">
+                <p class="mt-3">
                     Due to the events that transpired between them and Hemiad, dwarves are firm believers of second, third, or however many chances it takes. They are forgiving to a degree that
                     other race view as unexplaniable, and will never truly hate a person, no matter their deeds. Even when betrayed, trampled, and abandoned, a dwarf will hold firm belief that
                     anyone can change and realize their mistakes. Unfortunately, their nature is often taken advantage of to a varying degree.
@@ -105,13 +109,13 @@
         </div>
 
         <div class="row">
-            <div data-aos="fade-right" class="col mt-5">
-                <h3 class="fst-italic">
+            <div data-aos="fade-right" class="col-sm-6 mt-5">
+                <h3 class="fst-italic quote">
                     "They make rocks edible! (Crunch) And it tastes good!"
                 </h3>
                 <p class="fst-italic text-end">-Hall Lightroot, munching on rocks</p>
 
-                <p class="mt-3 ms-3">
+                <p class="mt-3">
                     The cuisine of the dwarves are fascinating as it is strange. Dwarves are master chefs, and some operate restaurants that attract patrons across the lands.
                     While they prepare cuisine of all culture and race at miraculous quality, they also have the ability to make most inedible things edible. The most
                     famous example of this is their ability to prepare stones and rocks as an edible substance, even to other races. While many non-dwarven chefs have attempted
@@ -120,7 +124,7 @@
 
 
             </div>
-            <div data-aos="zoom-in-left" class="col-sm-5 text-center">
+            <div data-aos="zoom-in-left" class="col text-center">
                 <img class="img-fluid" src="images/dwarf_food.png" />
                 <p class="fw-bold">A dwarven cuisine of boulder soup</p>
             </div>
