--- a/Web-Developer-Course/Dungeon/antri_elf.html
+++ b/Web-Developer-Course/Dungeon/antri_elf.html
@@ -2,11 +2,11 @@
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <title>Portfolio</title>
+    <title>Antri_Elf</title>
     <meta charset="utf-8" />
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" href="images/old shield_item.png" />
+    <link rel="icon" href="images/old_shield_item.png" />
     <link href="../jquery_ui/jquery-ui.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js">
@@ -16,15 +16,19 @@
     <link rel="stylesheet" type="text/css" href="antriStyle.css">
     <!--animate on scroll library-->
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Mate+SC&display=swap" rel="stylesheet">
+
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Josefin+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=IM+Fell+DW+Pica+SC&display=swap" rel="stylesheet">
 </head>
 <body>
     <!--navbar-->
     <nav class="navbar navbar-expand-lg fixed-top navbar-home">
         <div class="container-fluid">
-            <a class="navbar-brand ms-3" href="antri_home.html">
-                <img src="images/old_shield_item.png" alt="logo" width="40" height="40" />
+            <a class="navbar-brand ms-5" href="antri_home.html">
+                <img src="images/antri_logo.png" alt="logo" height="40" />
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <!--<span class="navbar-toggler-icon"></span>-->
@@ -32,10 +36,10 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav abs-center-x">
-                    <li class="nav-item">
+                    <li class="nav-item ms-3">
                         <a class="nav-link" aria-current="page" href="antri_home.html">Home</a>
                     </li>
-                    <li class="nav-item dropdown">
+                    <li class="nav-item dropdown ms-3">
                         <a class="nav-link dropdown-toggle" href="#" id="raceDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Race
                         </a>
@@ -46,14 +50,14 @@
                             <li><a class="dropdown-item" href="antri_halfling.html">Halfling</a></li>
                         </ul>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item ms-3">
                         <a class="nav-link" aria-current="page" href="antri_creatures.html">Wildlife</a>
                     </li>
 
-                    <li class="nav-item">
+                    <li class="nav-item ms-3">
                         <a class="nav-link" aria-current="page" href="antri_map.html">World</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item ms-3">
                         <a class="nav-link" aria-current="page" href="antri_deity.html">Deities</a>
                     </li>
                 </ul>
@@ -65,36 +69,38 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-8 mt-5">
-                <h1 class="intro-header ms-5">Elf</h1>
+                <h1 class="intro-header">Elf</h1>
                 <hr />
             </div>
         </div>
+
         <div class="row">
-            <div data-aos="zoom-in" class="col-sm-5 text-center">
+            <div data-aos="zoom-in" class="col text-center">
                 <img class="img-fluid" id="body_illus" src="images/elf_vera.png" />
                 <p class="fw-bold">Vera Daran, elven mage</p>
             </div>
-            <div data-aos="fade-left" class="col mt-5">
-                <h3 class="fst-italic">
+
+            <div data-aos="fade-left" class="col-sm-6 mt-3">
+                <h3 class="quote fst-italic">
                     "People always look up to Elves for being master magicians and whatnot,
                     but if you get to live that long, you <span class="fw-bold">have</span> to be a master at something"
                 </h3>
                 <p class="fst-italic text-end">-Hall Lightroot, adventurer</p>
 
-                <p class="mt-3 ms-3">
+                <p class="mt-3">
                     Originally spirits created by goddess Avera to tend her forest, elves transformed into
                     what they are today after choosing to stay behind on Antri during the Hemiad Explosion. Elves are similar to humans in size, but tend to be lankier. Instead of rounded ears
                     of the other races, they possess pointed ears that distinguish them easily from humans. Elves do not age after a certain age, and in result do not die of old age, they are still susceptible
                     to wounds and diseases, however.
                 </p>
 
-                <p class="mt-3 ms-3">
+                <p class="mt-3">
                     Elves are easygoing people, often nonchalant to the problems and events around them. They tend to take things slowly, often taking the "scenic route" when given the choice.
                     Due to their relaxed nature, they are not easily angered and hardly holds grudges, thus elves are generally liked and welcomed by those around them. However, coupled with their
                     easygoing nature and extremely long lifespan, elves have a very poor concept of time. They are hardly on time for a gathering, and deadlines are more often a suggestion than a requirement.
                 </p>
 
-                <p class="mt-3 ms-3">
+                <p class="mt-3">
                     Besides their long life and easy going attitude, elves are also known for their extreme appetite, which take many people by surprise due to their skinny build. Given the chance they will
                     desecrate a banquet, and no knowledgable establishment hosts an eating contest that allow elves. A common misconception is that elves are vegetable lovers, but elves only
                     eat vegetables because they would bankrupt themselves if they satisfied their hunger only through meat.
@@ -103,18 +109,18 @@
         </div>
 
         <div class="row">
-            <div data-aos="fade-right" class="col mt-5">
-                <h3 class="fst-italic">
+            <div data-aos="fade-right" class="col-sm-6 mt-3">
+                <h3 class="fst-italic quote">
                     "We stand impressed at the elves' mastery of magic, we remain eternally grateful at their willingess to share it."
                 </h3>
                 <p class="fst-italic text-end">-Mago Silverline, human mage</p>
 
-                <p class="mt-3 ms-3">
+                <p class="mt-3">
                     Due to their origin as a spirit, elves are naturally gifted mages. They can easily grasp magical concepts that befuddle other races, and often discover several
                     new spells and magical fields in their life. Elves tend to enjoy teaching others on magic, seeing magic as a tool that should be shared to improve the lives of
                     those willing to learn it. Thus, it is common to see elven professors at magical universities, or an adventuring elf rambling about magical theories to passerbys.
                 </p>
-                <p class="mt-3 ms-3">
+                <p class="mt-3">
                     On the other hand, elves possess an attiude on magic that other races may consider irreponsible. They show little restraint in developing potentially destructive spells
                     and studies, arguing that any spell is ultimately fashioned to be as destructive or harmless as the caster wills. (They also mutter that a non-elf wouldn't understand the formula anyways)
                     However, after cases of unrestrained mages wreaking havoc
@@ -124,7 +130,7 @@
 
 
             </div>
-            <div data-aos="zoom-in-left" class="col-sm-5 text-center">
+            <div data-aos="zoom-in-left" class="col text-center">
                 <img class="img-fluid" src="images/elf_magic.png" />
                 <p class="fw-bold">Tools of a elven mage</p>
             </div>
