--- a/Web-Developer-Course/Dungeon/antri_creatures.html
+++ b/Web-Developer-Course/Dungeon/antri_creatures.html
@@ -2,11 +2,11 @@
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <title>antri-creatures</title>
+    <title>Antri-Creatures</title>
     <meta charset="utf-8" />
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" href="images/old shield_item.png" />
+    <link rel="icon" href="images/old_shield_item.png" />
     <link href="../jquery_ui/jquery-ui.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js">
@@ -16,15 +16,19 @@
     <link rel="stylesheet" type="text/css" href="antriStyle.css">
     <!--animate on scroll library-->
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Mate+SC&display=swap" rel="stylesheet">
+
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Josefin+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=IM+Fell+DW+Pica+SC&display=swap" rel="stylesheet">
 </head>
 <body>
     <!--navbar-->
     <nav class="navbar navbar-expand-lg fixed-top navbar-home">
         <div class="container-fluid">
-            <a class="navbar-brand ms-3" href="antri_home.html">
-                <img src="images/old_shield_item.png" alt="logo" width="40" height="40" />
+            <a class="navbar-brand ms-5" href="antri_home.html">
+                <img src="images/antri_logo.png" alt="logo" height="40" />
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <!--<span class="navbar-toggler-icon"></span>-->
@@ -32,10 +36,10 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav abs-center-x">
-                    <li class="nav-item">
+                    <li class="nav-item ms-3">
                         <a class="nav-link" aria-current="page" href="antri_home.html">Home</a>
                     </li>
-                    <li class="nav-item dropdown">
+                    <li class="nav-item dropdown ms-3">
                         <a class="nav-link dropdown-toggle" href="#" id="raceDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Race
                         </a>
@@ -46,14 +50,14 @@
                             <li><a class="dropdown-item" href="antri_halfling.html">Halfling</a></li>
                         </ul>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item ms-3">
                         <a class="nav-link active" aria-current="page" href="antri_creatures.html">Wildlife</a>
                     </li>
 
-                    <li class="nav-item">
+                    <li class="nav-item ms-3">
                         <a class="nav-link" aria-current="page" href="antri_map.html">World</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item ms-3">
                         <a class="nav-link" aria-current="page" href="antri_deity.html">Deities</a>
                     </li>
                 </ul>
@@ -104,17 +108,17 @@
     <div class="container">
         <div class="row">
             <div data-aos="fade-left" class="col mt-5 mb-5">
-                <h3 class="fst-italic">
+                <h3 class="fst-italic quote">
                     "It's gonna take me ages to write about all the creatures I have encountered"
                 </h3>
                 <p class="fst-italic text-end">-Oyster Chec, Halfling Warlock</p>
 
-                <p class="mt-3 ms-3">
+                <p class="mt-3">
                     The Hemiad Explosion changed every aspect of the world, including the creatures and plants inhabiting the world. While many explorers and scientists study the world and
                     its inhabitants, there is still a countless number of them to be discoverd. So the next time you explore the dark caves and the tallest mountains, keep your eyes peeled,
                     because you might come across a creature you have never seen before.
                 </p>
-                <p class="mt-3 ms-3">
+                <p class="mt-3">
                     Although the world is brimming with friendly and docile creatures, dangers lurk as well. Creatures that disobey the natural order of the world, and
                     pose danger to people are commonly referred to as monsters. Monster often resemble a twisted and demented version of existing creatures, and sometimes
                     even take a shape akin to that of a human. Most monsters are active and hunting at night, so try not to roam around at night, unless you are a hunter or an explorer
