--- a/Web-Developer-Course/Dungeon/antri_halfling.html
+++ b/Web-Developer-Course/Dungeon/antri_halfling.html
@@ -2,11 +2,11 @@
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <title>Portfolio</title>
+    <title>Antri-Halfling</title>
     <meta charset="utf-8" />
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" href="images/old shield_item.png" />
+    <link rel="icon" href="images/old_shield_item.png" />
     <link href="../jquery_ui/jquery-ui.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js">
@@ -16,15 +16,19 @@
     <link rel="stylesheet" type="text/css" href="antriStyle.css">
     <!--animate on scroll library-->
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Mate+SC&display=swap" rel="stylesheet">
+
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Josefin+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=IM+Fell+DW+Pica+SC&display=swap" rel="stylesheet">
 </head>
 <body>
     <!--navbar-->
     <nav class="navbar navbar-expand-lg fixed-top navbar-home">
         <div class="container-fluid">
-            <a class="navbar-brand ms-3" href="antri_home.html">
-                <img src="images/old_shield_item.png" alt="logo" width="40" height="40" />
+            <a class="navbar-brand ms-5" href="antri_home.html">
+                <img src="images/antri_logo.png" alt="logo" height="40" />
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <!--<span class="navbar-toggler-icon"></span>-->
@@ -32,10 +36,10 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav abs-center-x">
-                    <li class="nav-item">
+                    <li class="nav-item ms-3">
                         <a class="nav-link" aria-current="page" href="antri_home.html">Home</a>
                     </li>
-                    <li class="nav-item dropdown">
+                    <li class="nav-item dropdown ms-3">
                         <a class="nav-link dropdown-toggle" href="#" id="raceDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Race
                         </a>
@@ -46,14 +50,14 @@
                             <li><a class="dropdown-item active" href="antri_halfling.html">Halfling</a></li>
                         </ul>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item ms-3">
                         <a class="nav-link" aria-current="page" href="antri_creatures.html">Wildlife</a>
                     </li>
 
-                    <li class="nav-item">
+                    <li class="nav-item ms-3">
                         <a class="nav-link" aria-current="page" href="antri_map.html">World</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item ms-3">
                         <a class="nav-link" aria-current="page" href="antri_deity.html">Deities</a>
                     </li>
                 </ul>
@@ -65,35 +69,35 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-8 mt-5">
-                <h1 class="intro-header ms-5">Halfling</h1>
+                <h1 class="intro-header">Halfling</h1>
                 <hr />
             </div>
         </div>
         <div class="row">
-            <div data-aos="zoom-in" class="col-sm-5 text-center">
+            <div data-aos="zoom-in" class="col text-center">
                 <img class="img-fluid" id="body_illus" src="images/halfling_ita.png" />
                 <p class="fw-bold">Ita Chul, halfling blacksmith</p>
             </div>
-            <div data-aos="fade-left" class="col mt-5">
-                <h3 class="fst-italic">
+            <div data-aos="fade-left" class="col-sm-6 mt-3">
+                <h3 class="fst-italic quote">
                     "Where do they store all that energy and temper in that tiny body?"
                 </h3>
                 <p class="fst-italic text-end">-Passerby who envoked the wrath of a halfling</p>
 
-                <p class="mt-3 ms-3">
+                <p class="mt-3">
                     Short and stout, and great at making teapots (and anything in general), halflings are one of the common races that are scattered throughout most settlement. Related to dwarves,
                     halflings are descendents of dwarves who were exposed to the Hemiad Explosion. Halflings, on average,
                     tend to live a bit longer than humans, and often remain much healthier and lively than an older human. Despite their short stature which average between 4 to 4 and a half
                     feet, halflings are deceptively heavy and strong, and are easily able to match the strength of a human or an elf twice their size.
                 </p>
-                <p class="mt-3 ms-3">
+                <p class="mt-3">
                     Halflings in general are extremly socialble and friendly, and even gullible. They will often fall for ridiculous lies and stories, to amusement of many
                     tricksters. While halflings tend to be a target of many friendly jokes and pranks, almost no one dares to antagonize a halfling. Halflings are prideful to a fault
                     and have a notoriously short fuse when insulted, in fact, most bar fights that can involve a halfling will involve one. Many who have been attacked by a halfling
                     describe the experience as "being mauled by a compact bear".
                 </p>
 
-                <p class="mt-3 ms-3">
+                <p class="mt-3">
                     Although they may have a short temper, halflings are also very apologetic, admitting very quickly to losing their temper and apologizing for their conduct. On the other
                     hand, due to their pride they won't budge on matters that they truly believe they were in the right. Halflings can hold a lifetime grudge easier than any other race,
                     or even any other creature. But, as long as one remains thoughtful when interacting with a halflings, they would have made a halfling friend by the end of the conversation.
@@ -102,19 +106,19 @@
         </div>
 
         <div class="row">
-            <div data-aos="fade-right" class="col mt-5">
-                <h3 class="fst-italic">
+            <div data-aos="fade-right" class="col-sm-6 mt-5">
+                <h3 class="fst-italic quote">
                     "They say while a human child plays with blocks, a halfling child plays with hammer and tongs. Great crafters, maybe not so great parents."
                 </h3>
                 <p class="fst-italic text-end">-Damain Lepa, "on halflings"</p>
 
-                <p class="mt-3 ms-3">
+                <p class="mt-3">
                     Halflings are masters at making almost anything. Clothes weaved by a halfling are the comftiest, swords forged by a halfling cuts the best, and
                     a clock crafted by a halfling is never wrong. Most halflings make their living as some sort of crafters, and often become mentors at guilds after
                     gathering experience. Perfectonists due to the love for their craft and their prideful nature, it is often said that a halfling master scraps a hundred times
                     before finishing a work.
                 </p>
-                <p class="mt-3 ms-3">
+                <p class="mt-3">
                     Due to their renown, figures such as kings and heroes will request a halfling master to craft something. More often than not, they are met with an apology
                     or a flat refusal along the lines of "don't feel like it", but if they do accept a request, their work often goes down in history. Be it the sword that slew
                     the great monster or the shield of a legendary king, it will often have a signature of a halfling engraved on it.
@@ -122,7 +126,7 @@
 
 
             </div>
-            <div data-aos="zoom-in-left" class="col-sm-5 text-center">
+            <div data-aos="zoom-in-left" class="col text-center">
                 <img class="img-fluid" src="images/halfling_crafting.png" />
                 <p class="fw-bold">No anvil is safe from a halfling's relentless strikes</p>
             </div>
