--- a/Web-Developer-Course/Dungeon/antri_human.html
+++ b/Web-Developer-Course/Dungeon/antri_human.html
@@ -2,11 +2,11 @@
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <title>Portfolio</title>
+    <title>Antri-Human</title>
     <meta charset="utf-8" />
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" href="images/old shield_item.png" />
+    <link rel="icon" href="images/old_shield_item.png" />
     <link href="../jquery_ui/jquery-ui.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js">
@@ -16,15 +16,19 @@
     <link rel="stylesheet" type="text/css" href="antriStyle.css">
     <!--animate on scroll library-->
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Mate+SC&display=swap" rel="stylesheet">
+
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Josefin+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=IM+Fell+DW+Pica+SC&display=swap" rel="stylesheet">
 </head>
 <body>
     <!--navbar-->
     <nav class="navbar navbar-expand-lg fixed-top navbar-home">
         <div class="container-fluid">
-            <a class="navbar-brand ms-3" href="antri_home.html">
-                <img src="images/old_shield_item.png" alt="logo" width="40" height="40" />
+            <a class="navbar-brand ms-5" href="antri_home.html">
+                <img src="images/antri_logo.png" alt="logo" height="40" />
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <!--<span class="navbar-toggler-icon"></span>-->
@@ -32,10 +36,10 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav abs-center-x">
-                    <li class="nav-item">
+                    <li class="nav-item ms-3">
                         <a class="nav-link" aria-current="page" href="antri_home.html">Home</a>
                     </li>
-                    <li class="nav-item dropdown">
+                    <li class="nav-item dropdown ms-3">
                         <a class="nav-link dropdown-toggle" href="#" id="raceDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Race
                         </a>
@@ -46,14 +50,14 @@
                             <li><a class="dropdown-item" href="antri_halfling.html">Halfling</a></li>
                         </ul>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item ms-3">
                         <a class="nav-link" aria-current="page" href="antri_creatures.html">Wildlife</a>
                     </li>
 
-                    <li class="nav-item">
+                    <li class="nav-item ms-3">
                         <a class="nav-link" aria-current="page" href="antri_map.html">World</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item ms-3">
                         <a class="nav-link" aria-current="page" href="antri_deity.html">Deities</a>
                     </li>
                 </ul>
@@ -65,65 +69,76 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-8 mt-5">
-                <h1 class="intro-header ms-5">Human</h1>
+                <h1 class="intro-header">Human</h1>
                 <hr />
             </div>
         </div>
+
         <div class="row">
-            <div data-aos="zoom-in" class="col-md-5 text-center">
-                <img class="img-fluid" id="body_illus" src="images/human_hall.png" />
+            <div class="col text-center" data-aos="zoom-in">
+                <img id="body_illus" class="img-fluid" src="images/human_hall.png" />
                 <p class="fw-bold">Hall Lightroot, human adventurer</p>
             </div>
-            <div data-aos="fade-left" class="col mt-5">
-                <h3 class="fst-italic">
-                    "Humans may be a byproduct of the Hemiad Explosion, but they are now a driving force of the world that remains."
+
+            <div class="col-sm-6 mt-3" data-aos="fade-left">
+                
+
+                <h3 class="quote fst-italic">
+                    <q>Humans may be a byproduct of the Hemiad Explosion, but they are now a driving force of the world that remains.</q>
                 </h3>
                 <p class="fst-italic text-end">-Gram, dwarven lorekeeper</p>
 
-                <p class="mt-3 ms-3">
+                <p class="mt-3">
                     Humans are a race that came to be after the Hemiad Explosion, and the most numerous of the races. As humans were not crafted by a deity, they do not have a strong bond or connection
                     to any particular deity. Humans are diverse as they are numerous, but they tend to be taller than halflings and dwarves, and a bit shorter than elves. Humans live to be around 60,
                     but due to their curious and ambitious nature, they are a subject to a premature death more than other races.
                 </p>
-                <p class="mt-3 ms-3">
+                <p class="mt-3">
                     Although each human's personality is unique, most tend to be polite and tact, and has very little trouble getting along with other races. Humans enjoy exploring and has no problem
                     settling in new areas, but develop strong attachments to people and places they have spent a long time around. They can become overprotective of what they consider important or dear
                     to them, leading to conflicts.
                 </p>
 
-                <p class="mt-3 ms-3">
+                <p class="mt-3">
                     Ambitions can grasp a human harder than any other race. While this ambition have led to advancements of humankind at an unthinkable phase, it has also consumed many humans, leading to
-                    creation of many tyrants and villains. In fact, while there have been criminals of every race, villains that have marked their name in history have almost always been a human.
+                    creation of tyrants and villains. There have been criminals of every race, but villains that have marked their name in history have almost always been a human.
 
                 </p>
+
+                
             </div>
+
+
         </div>
 
         <div class="row">
-            <div data-aos="fade-right" class="col mt-5">
-                <h3 class="fst-italic">
+            <div class="col-sm-6 mt-3" data-aos="fade-right">
+
+                <h3 class="quote fst-italic">
                     "Every race makes stories, humans make them worth listening to"
                 </h3>
                 <p class="fst-italic text-end">-Vera Daran, elven mage</p>
 
-                <p class="mt-3 ms-3">
+                <p class="mt-3">
                     If there is one thing that sets apart humans from the other race, it is their ability to make something entertaining. Humans are authors
                     of plays, songs, and stories that are retold and loved by all races. A gifted human can retell the dullest stories as if it was an epic tale
                     and a skilled human musican enchants the whole crowd at a tavern or a concert. Many human settlement holds festivals that hosts plays and sells
                     the latest novels by renowned actors.
                 </p>
-                <p class="mt-3 ms-3">
+                <p class="mt-3">
                     While human authors and bards make every heroic tale worth remembering, they also have a tendency to stretch the truth a bit. People are often
                     disappointed that the real details of an event or a character may not be as grand as what the tunes and stories have made it out to be. But what can
                     you do? That's entertainment!
                 </p>
 
-
             </div>
-            <div data-aos="zoom-in-left" class="col-md-5 text-center">
-                <img class="img-fluid" src="images/human_story.png" />
+
+            <div class="col mt-2 text-center" data-aos="zoom-in">
+                <img id="body_illus" class="img-fluid" src="images/human_story.png" />
                 <p class="fw-bold">Humans entertain and create in many forms</p>
             </div>
+
+
         </div>
 
     </div>
